# gitlab_ldap_group_sync

./: LICENSE  env-template  get_users.py  pyproject.toml  sync_gitlab_groups.py
gitlab_ldap_sync/: __init__.py  __main__.py  ldap_connection.py  mock.py  utils.py
